maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:1: error: Missing closing brace `}' assumed here
def aMurD():Boolean = {var b =false;droite();b = estFaceMur();gauche();return b}
^Escaper:1: error: expected class or object definition
def aMurD():Boolean = {var b =false;droite();b = estFaceMur();gauche();return b}
^Escaper:2: error: expected class or object definition
def aMurG():Boolean = {var b =false;gauche();b = estFaceMur();droite();return b}
^Escaper:5: error: expected class or object definition
def garM() { if (aMurD()) {if (estFaceMur()) {gauche()} else avance()} else {droite();avance()
^